--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "@avinlab/run-shell",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/avin/run-shell.git"
+  },
   "main": "index.js",
   "bin": "index.js",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.17.21",
-    "shelljs": "^0.8.4"
+    "lodash": "4.17.21",
+    "shelljs": "0.8.4"
   }
 }
